--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -641,20 +641,20 @@ The reported power is the proportion of replication where the permutation p-valu
 \begin{figure}[h]
 \centering
 \caption{\mycaption}	
-%\label{fig:simulation_1}
+\label{fig:dependence}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
   	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
-	  \caption{Compound symmetry}  
-%	\label{fig:2016-07-2721:21:12}
-	\end{subfigure}%
+	  \caption{\textbf{Compound Symmetry:} $\Sigma_{k,l}=0$, or $\rho=0.8$ if $|k-l|$ is divisible by $p/2$.[TODO: verify]. }  
+	\label{fig:fig:dependence_1}
+	\end{subfigure}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{AR(1)} %TODO
-%	\label{fig:2016-07-2721:21:12}
+	  \caption{\textbf{AR(1):} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
+	\label{fig:fig:dependence_2}
 	\end{subfigure}
 \end{figure}
 
