--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -667,13 +667,13 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05zoom"}
-	  \caption{n=40, zoom}  %TODO
+	  \caption{\textbf{Low-Dimension:} Zoom in on false positive rates for $n=40$.} 
 	\label{fig:fig:large_sample_1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33zoom"}
-	  \caption{n=400, zoom} %TODO
+	  \caption{\textbf{High-Dimension:} Zoom in on false positive rates for $n=400$.} 
 	\label{fig:fig:large_sample_2}
 	\end{subfigure}
 \end{figure}
