--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -12,7 +12,10 @@
 \usepackage{subcaption}
 \usepackage{lineno}
 \usepackage{tcolorbox}
-\usepackage[font=footnotesize]{caption}
+\usepackage{caption}
+
+\captionsetup[figure]{labelfont=it,textfont={bf,it}}
+\captionsetup[subfigure]{labelfont=bf,textfont=normalfont,singlelinecheck=off,justification=raggedright}
 
 
 \author{Jonathan Rosenblatt \and Roee Gilron \and Roy Mukamel}
