--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -634,7 +634,7 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-04 19:32:17"}
-	  \caption{\textbf{Heavytailed:} $\eta_i$ is not $p$-variate Gaussia, but rather $p$-variate t, with $3$ degrees of freedom.  } 
+	  \caption{\textbf{Heavytailed:} $\eta_i$ is not $p$-variate Gaussian, but rather $p$-variate t, with $df=3$ .  } 
 	\label{fig:t_null}
 	\end{subfigure}
 \end{figure}
