--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -15,7 +15,7 @@
 \usepackage{caption}
 
 \captionsetup[figure]{labelfont=it,textfont={bf,it}}
-\captionsetup[subfigure]{labelfont=bf,textfont=normalfont,singlelinecheck=off,justification=raggedright,format=hang}
+\captionsetup[subfigure]{width=0.8\hsize,labelfont=bf,textfont=footnotesize,singlelinecheck=off,justification=raggedright,format=hang}
 
 
 \author{Jonathan Rosenblatt \and Roee Gilron \and Roy Mukamel}
