--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -670,13 +670,13 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05zoom"}
-	  \caption{\textbf{Low-Dimension:} Zoom in on false positive rates for $n=40$.} 
+	  \caption{\textbf{Low-Dimension:} False positive rates for $n=40$.} 
 	\label{fig:fig:large_sample_1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33zoom"}
-	  \caption{\textbf{High-Dimension:} Zoom in on false positive rates for $n=400$.} 
+	  \caption{\textbf{High-Dimension:} False positive rates for $n=400$.} 
 	\label{fig:fig:large_sample_2}
 	\end{subfigure}
 \end{figure}
@@ -699,7 +699,7 @@ The reported power is the proportion of replication where the permutation p-valu
 	  \centering
 	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{n=400, smaller effect, zoom} %TODO
+	  \caption{\textbf{High-Dimension, local alternative:} $n=400$, $\mu \in \frac{\sqrt{40}}{\sqrt{400}} \times \set{0,1/4,1/2}.$} %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}
 \end{figure}
