--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -641,27 +641,6 @@ The reported power is the proportion of replication where the permutation p-valu
 
 
 
-\begin{figure}[h]
-\centering
-\caption{\mycaption}	
-\label{fig:dependence}
-	\begin{subfigure}{.5\textwidth}
-	  \centering
-  	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
-	  \caption{\textbf{Compound Symmetry:} $\Sigma_{k,l}=0$, or $\rho=0.8$ if $|k-l|$ is divisible by $p/2$.[TODO: verify]. }  
-	\label{fig:fig:dependence_1}
-	\end{subfigure}
-	\begin{subfigure}{.5\textwidth}
-	  \centering
-	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{\textbf{AR(1):} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
-	\label{fig:fig:dependence_2}
-	\end{subfigure}
-\end{figure}
-
-
 
 \begin{figure}[h]
 \centering
@@ -687,22 +666,22 @@ The reported power is the proportion of replication where the permutation p-valu
 \begin{figure}[h]
 \centering
 \caption{\mycaption}	
-%\label{fig:simulation_1}
-	\begin{subfigure}{.5\textwidth}
-	  \centering
-	  	  \missingfigure[figwidth=6cm]{TODO}
-%  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33"}
-	  \caption{n=400, smaller effects}  %TODO
-%	\label{fig:2016-07-2721:21:12}
-	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{\textbf{High-Dimension, local alternative:} $n=400$, $\mu \in \frac{\sqrt{40}}{\sqrt{400}} \times \set{0,1/4,1/2}.$} %TODO
+	  \caption{\textbf{High-Dimension, local alternative:} $n=400$, $\mu \in \frac{\sqrt{40}}{\sqrt{400}} \times \set{0,1/4,1/2}.$} 
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}
+		\begin{subfigure}{.5\textwidth}
+		  \centering
+		  \missingfigure[figwidth=6cm]{TODO}
+	%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+		  \caption{\textbf{AR(1) dependence:} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
+		\label{fig:fig:dependence_2}
+	\end{subfigure}
 \end{figure}
+
 
 
 
