--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -107,7 +107,7 @@ In this light, the accuracy test is remarkably inefficient compared to the locat
 For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \citep{lehmann_parametric_2009}, so that an ARE of $2.5$ is strong evidence in favor of the location test. 
 
 Before discarding accuracy tests as innefficient, we recall that \cite{ramdas_classification_2016} analyzed a \emph{half-sample} holdout. 
-The authors thus conjecture that a leave-one-out approach, which makes more efficient use of the data, may have better performance. 
+The authors conjectured that a leave-one-out approach, which makes more efficient use of the data, may have better performance. 
 Also, the analysis in \cite{ramdas_classification_2016} is asymptotic. 
 This eschews the discrete nature of the accuracy statistic, which will be shown to have  crucial impact. 
 Since typical sample sizes in neuroscience are not large, we seek to study which test is to be preferred in finite samples? 
@@ -116,7 +116,7 @@ Our conclusion will be quite simple: {\em location tests almost always have more
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
 Discrete test statistics are known to be conservative \citep{hemerik_exact_2014}, since they are insensitive to mild perturbations of the data, and they cannot exhaust the permissible false positive rate. 
 The degree of discretization is governed by the number of samples. 
-In our neuroscience example from \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
+In our neuroscience example from \citet{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subjects, or the number of trial-repeats in an neuroimaging study. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
@@ -217,7 +217,7 @@ Our intuition suggests that since more folds imply a less concentrated estimate,
 The of tests we will be comparing is collected for convenience in Table~\ref{tab:collected}.
 
 
-\begin{table}[th]
+\begin{tcolorbox}
 \centering
 \begin{tabular}{l|c|c|c|c}
 Name & Basis & CV & Accuracy & Parameters\\ 
@@ -239,6 +239,7 @@ svm.noCV.2 & SVM & FALSE & accuracy & cost=1e-1 \\
 svm.noCV.3 & SVM & FALSE & z-accuracy & cost=1e1 \\ 
 svm.noCV.4 & SVM & FALSE & z-accuracy & cost=1e-1 \\
 \end{tabular} 
+\captionsetup{type=table}
 \caption{\footnotesize
 This table enumerates the various test statistics we will be studying. 
 Three are location tests: Hotelling, Hotelling.shrink, and sd.
@@ -247,10 +248,9 @@ Three are location tests: Hotelling, Hotelling.shrink, and sd.
 \textit{sd} is another high dimensional version of the $T^2$, from \cite{srivastava_two_2013}. 
 The rest of the tests are variations of the linear SVM, and Fisher's LDA, with varying accuracy measures, cross validated or not, and varying tuning parameters. 
 For example, \textit{svm.CV.4} is a linear SVM, with \textit{libsvm}'s cost parameter set at $0.1$, using the cross validated z-scored accuracy ($|\acc_{\hypEstim}-\dominant|/\sqrt{\dominant(1-\dominant)}$, see Section~\ref{sec:considerations}).
-Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the resubstitution accuracy, without cross validation, and without z-scoring. 
-}
+Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the resubstitution accuracy, without cross validation, and without z-scoring.}
 \label{tab:collected}
-\end{table}
+\end{tcolorbox}
 
 
 
