--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -268,7 +268,7 @@ This is true, in particular if:
 (a) the folds are balanced or not,
 (b) the tuning parameters of some test statistic are varied,
 (d) the number of folds is varied.
-We also observe that the most conservative tests are the accuracy tests that are not cross validated. 
+We also observe that the most conservative tests are the resubstitution accuracy measures. 
 We return to this matter in the Discussion.
 
 
