--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -313,17 +313,17 @@ From the simulation results reported in Appendix~\ref{apx:simulations} we collec
 \begin{enumerate}
 \item Location tests have more power than accuracy tests in all our configurations.
 \item The conservativeness decays as the sample grows (Figures~\ref{fig:large_sample_1}, \ref{fig:large_sample_2} and \ref{fig:large_sample_3}), supporting the statement that discretization is responsible for power loss. 
-\item The power is may increase or decrease with the number of folds (Figure~\ref{fig:n_folds}). [TODO:effect of n.folds.]
+\item The power may increase or decrease with the number of folds (Figure~\ref{fig:n_folds}). [TODO:effect of n.folds.]
 \item The z-scoring of the accuracies was introduced to deal with unbalanced foldings. 
 If the z-scoring has any effect at all, it merely kills power.
 There is really no reason to use it. 
 \item Both accuracy and location tests are innapropriate for scale alternatives (Figure~\ref{fig:scale_change}). 
 This was to be expeted and is reported mostly as a sanity check.
 \item The presence of heavy tails (Figure~\ref{fig:t_null}) may reduce power, but does not quantitatively change results. 
-\item Balancing typically has no effect. 
+\item Balanced folding typically has no effect. 
 It increased power only for the z-scored statistics (Figure~\ref{fig:simulation_1}). This is surprising given they were precisely designed to deal with the presence of imbalance. 
 \item Varying the accuracy test's tunning parameter, such as the cost (i.e. margins) has no effect on the power of the test. 
-\item ... [TODO: correlation between voxels].
+\item Correlation between coordinates, mimiquing temporal correlation in fMRI data, has no effect on conclusions, since all test statistics account for this corrlation (Figure~\ref{fig:ar_1}). %TODO: verify
 \end{enumerate}
 
 
@@ -680,7 +680,7 @@ The reported power is the proportion of replication where the permutation p-valu
 		  \missingfigure[figwidth=6cm]{TODO}
 	%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 		  \caption{\textbf{AR(1) dependence:} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
-		\label{fig:fig:dependence_2}
+		\label{fig:ar_1}
 	\end{subfigure}
 \end{figure}
 
