--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -750,7 +750,7 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   issn = {0018-9448},
   doi = {10.1109/TIT.2005.856955},
   abstract = {The Neyman-Pearson (NP) approach to hypothesis testing is useful in situations where different types of error have different consequences or a priori probabilities are unknown. For any \ensuremath{\alpha{}>}0, the NP lemma specifies the most powerful test of size \ensuremath{\alpha}, but assumes the distributions for each hypothesis are known or (in some cases) the likelihood ratio is monotonic in an unknown parameter. This paper investigates an extension of NP theory to situations in which one has no knowledge of the underlying distributions except for a collection of independent and identically distributed (i.i.d.) training examples from each hypothesis. Building on a "fundamental lemma" of Cannon et al., we demonstrate that several concepts from statistical learning theory have counterparts in the NP context. Specifically, we consider constrained versions of empirical risk minimization (NP-ERM) and structural risk minimization (NP-SRM), and prove performance guarantees for both. General conditions are given under which NP-SRM leads to strong universal consistency. We also apply NP-SRM to (dyadic) decision trees to derive rates of convergence. Finally, we present explicit algorithms to implement NP-SRM for histograms and dyadic decision trees.},
-  timestamp = {2016-08-02T07:25:03Z},
+  timestamp = {2016-08-06T06:04:02Z},
   number = {11},
   journal = {IEEE Transactions on Information Theory},
   author = {Scott, C. and Nowak, R.},
@@ -768,11 +768,11 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   doi = {10.1093/biomet/63.2.239},
   abstract = {SUMMARY The apparent error rate is a commonly used estimator of the actual error rate in discriminant analysis. In this study the asymptotic bias of the apparent error rate is derived in the context of two multivariate normal populations with unknown different means and unknown common covariance matrix. From the derived expansion a correction term ia available for reducing the bias of the apparent error rate from the first to the second order with respect to the reciprocals of the initial sample sizes. Also, some previously unanswered questions on inequalities between the average apparent, the optimal, and the average actual error rates are solved.},
   language = {en},
-  timestamp = {2016-08-05T06:27:03Z},
+  timestamp = {2016-08-06T06:42:46Z},
   number = {2},
   urldate = {2016-08-05},
   journal = {Biometrika},
-  author = {McLACHLAN, G. J.},
+  author = {McLachlan, G. J.},
   month = jan,
   year = {1976},
   keywords = {Bias of apparent error rate,Error rates; optimal; actual and apparent,Inequalities between error rates,Linear discriminant function},
@@ -798,6 +798,64 @@ Results: A model-based approach is used to compare the ranking performances of r
   pages = {253--258},
   file = {Braga-Neto et al_2004_Is cross-validation better than resubstitution for ranking genes.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/V3JSA76W/Braga-Neto et al_2004_Is cross-validation better than resubstitution for ranking genes.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/55E75EJ6/253.html:text/html},
   pmid = {14734317}
+}
+
+@article{blanchard_semi-supervised_2010,
+  title = {Semi-{{Supervised Novelty Detection}}},
+  volume = {11},
+  issn = {ISSN 1533-7928},
+  timestamp = {2016-08-06T05:47:34Z},
+  number = {Nov},
+  urldate = {2016-08-06},
+  journal = {Journal of Machine Learning Research},
+  author = {Blanchard, Gilles and Lee, Gyemin and Scott, Clayton},
+  year = {2010},
+  pages = {2973--3009},
+  file = {Blanchard et al_2010_Semi-Supervised Novelty Detection.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/VHWFXXZX/Blanchard et al_2010_Semi-Supervised Novelty Detection.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3C47FU5K/blanchard10a.html:text/html}
+}
+
+@inproceedings{davenport_controlling_2006,
+  title = {Controlling {{False Alarms With Support Vector Machines}}},
+  volume = {5},
+  doi = {10.1109/ICASSP.2006.1661344},
+  abstract = {We study the problem of designing support vector classifiers with respect to a Neyman-Pearson criterion. Specifically, given a user-specified level alpha isin (0,1), how can we ensure a false alarm rate no greater than q while minimizing the miss rate? We examine two approaches, one based on shifting the offset of a conventionally trained SVM and the other based on the introduction of class-specific weights. Our contributions include a novel heuristic for improved error estimation and a strategy for efficiently searching the parameter space of the second method. We also provide a characterization of the feasible parameter set of the 2v-SVM on which the second approach is based. The proposed methods are compared on four benchmark datasets},
+  timestamp = {2016-08-06T05:53:50Z},
+  booktitle = {2006 {{IEEE International Conference}} on {{Acoustics Speech}} and {{Signal Processing Proceedings}}},
+  author = {Davenport, M. A. and Baraniuk, R. G. and Scott, C. D.},
+  month = may,
+  year = {2006},
+  keywords = {Benign tumors,Cancer,Constraint theory,Costs,error analysis,error estimation,false alarms,Neoplasms,Neyman-Pearson criterion,pattern classification,Statistics,Support vector machine classification,support vector machines,Training data},
+  pages = {V--V},
+  file = {Davenport et al_2006_Controlling False Alarms With Support Vector Machines.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CD3MIFKQ/Davenport et al_2006_Controlling False Alarms With Support Vector Machines.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/P5XHAZXJ/abs_all.html:text/html}
+}
+
+@inproceedings{scott_novelty_2009,
+  title = {Novelty detection: {{Unlabeled}} data definitely help.},
+  shorttitle = {Novelty detection},
+  timestamp = {2016-08-06T05:59:00Z},
+  urldate = {2016-08-06},
+  booktitle = {{{AISTATS}}},
+  author = {Scott, Clayton and Blanchard, Gilles},
+  year = {2009},
+  pages = {464--471},
+  file = {Scott_Blanchard_2009_Novelty detection.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SXE6WR5Q/Scott_Blanchard_2009_Novelty detection.pdf:application/pdf}
+}
+
+@article{scott_performance_2007,
+  title = {Performance {{Measures}} for {{Neyman}} \#x2013;{{Pearson Classification}}},
+  volume = {53},
+  issn = {0018-9448},
+  doi = {10.1109/TIT.2007.901152},
+  abstract = {In the Neyman-Pearson (NP) classification paradigm, the goal is to learn a classifier from labeled training data such that the probability of a false negative is minimized while the probability of a false positive is below a user-specified level alpha isin (0,1). This work addresses the question of how to evaluate and compare classifiers in the NP setting. Simply reporting false positives and false negatives leaves some ambiguity about which classifier is best. Unlike conventional classification, however, there is no natural performance measure for NP classification. We cannot reject classifiers whose false positive rate exceeds a since, among other reasons, the false positive rate must be estimated from data and hence is not known with certainty. We propose two families of performance measures for evaluating and comparing classifiers and suggest one criterion in particular for practical use. We then present general learning rules that satisfy performance guarantees with respect to these criteria. As in conventional classification, the notion of uniform convergence plays a central role, and leads to finite sample bounds, oracle inequalities, consistency, and rates of convergence. The proposed performance measures are also applicable to the problem of anomaly prediction.},
+  timestamp = {2016-08-06T06:01:45Z},
+  number = {8},
+  journal = {IEEE Transactions on Information Theory},
+  author = {Scott, C.},
+  month = aug,
+  year = {2007},
+  keywords = {anomaly prediction,computational complexity,Convergence,Costs,Diseases,false negative probability,false positive probability,frequency,Intrusion detection,Neyman-Pearson classification,Neyman–Pearson (NP) classification,NP classification paradigm,Particle measurements,pattern classification,performance measures,probability,Statistical analysis,statistical learning,statistical learning theory,Testing,Training data},
+  pages = {2852--2863},
+  file = {Scott_2007_Performance Measures for Neyman #x2013\;Pearson Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AWD7V9BK/Scott_2007_Performance Measures for Neyman #x2013\;Pearson Classification.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/WRXQ7J63/abs_all.html:text/html}
 }
 
 
