--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -323,7 +323,7 @@ From the simulation results reported in Appendix~\ref{apx:simulations} we collec
 \begin{enumerate}
 \item Location tests have more power than accuracy tests in all our configurations.
 \item The conservativeness decays as the sample grows (Figures~\ref{fig:large_sample_1}, \ref{fig:large_sample_2} and \ref{fig:large_sample_3}), supporting the statement that discretization is responsible for power loss. 
-\item The power may increase or decrease with the number of folds (Figure~\ref{fig:n_folds}). [TODO:effect of n.folds.]
+\item The power may increase or decrease with the number of folds (Figure~\ref{fig:n_folds}). %TODO: effect of n.folds.
 \item The z-scoring of the accuracies was introduced to deal with unbalanced foldings. 
 If the z-scoring has any effect at all, it merely kills power.
 There is really no reason to use it. 
