--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -424,7 +424,8 @@ For such cases we collect some conclusions from our simulations on the best prac
 \item Cross validating the accuracy statistic increases power in moderate sample sizes. 
 The power loss due to the holdout inefficiency is smaller than the power loss due to the concentration of the resubstitution accuracy. 
 For large sample sizes, discretization and concentration have weaker effects, and the cross validated accuracy may be replaced with the computationally more efficiency resubstitution accuracy.
-\item Permuting features is easier than permuting labels. It allows to preserve balanced folds after a permutation without refolding. 
+\item Permuting features is easier than permuting labels. 
+It allows to preserve balanced folds after a permutation without refolding, thus reducing computational complexity.
 \item There is no gain in z-scoring the accuracy scores. 
 \item Cross validated accuracy with balanced folds has more power than unbalanced folds. We currently have no intuition to offer for this phenomenon.
 \item It is unclear what is the effect of the number of folds. More folds increase power by reducing the number of holdout samples. On the other hand, it increases the concentration of the accuracy statistic. Compounded with the discreteness of the accuracy statistic, this decreases power. 
